# K-IRC

./: .env.example  .gitignore  README.md  README_TEST.md  docker-compose.test.yml  env.aiven.template  pyproject.toml
init-scripts/: 01-create-dbs.sh
scripts/: generate_test_data.py  setup_infra.py  verify_kafka.py  verify_postgres.py  verify_valkey.py
src/kirc/: __init__.py  __main__.py  app.py  config.py  crypto.py  kirc.tcss  utils.py
src/kirc/cache/: __init__.py  client.py
src/kirc/db/: __init__.py  client.py  models.py  reset_db.py  schema.sql
src/kirc/kafka/: __init__.py  client.py  messages.py
src/kirc/tui/: __init__.py  exchange.py  settings.py  widgets.py  wizard.py
terraform/: kafka.tf  main.tf  outputs.tf  postgresql.tf  terraform.tfvars.example  valkey.tf  variables.tf
tests/: __init__.py
