[project]
name = "kirc"
version = "0.1.0"
description = "Kafka Relay Chat - Actor-model TUI chat using Kafka, PostgreSQL, and Valkey"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "K-IRC Contributors" }
]
keywords = ["kafka", "chat", "tui", "actor-model", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "textual>=0.89.0",
    "aiokafka>=0.11.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "valkey>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "msgpack>=1.0.0",
    "cryptography>=46.0.3",
    "kafka-python-ng>=2.2.2",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
kirc = "kirc.__main__:main"

[project.urls]
Homepage = "https://github.com/Ugbot/K-IRC"
Repository = "https://github.com/Ugbot/K-IRC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kirc"]

[tool.uv]
dev-dependencies = [
    "textual-dev>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
